# chatbot

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/chatbot/: model.py  telegram_bot.py
tests/: test_model.py  test_telegram_bot.py
