[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Kirill Pushkarev <kirillpush@yandex.ru>"]
readme = "README.md"
packages = [{include = "chatbot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
