[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Kirill Pushkarev <kirillpush@yandex.ru>"]
readme = "README.md"
packages = [{include = "*", from = "src/chatbot"}, {include = "tests"}]
license = "MIT"
repository = "https://github.com/kirill-push/chatbot"
homepage = "https://github.com/johschmidt42/python-project-johannes"

[tool.poetry.dependencies]
python = "^3.11"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
nltk = "^3.8.1"
transformers = "^4.34.1"
torchinfo = "^1.8.0"
python-telegram-bot = "==13.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
datetime = "^5.2"

[tool.poetry.group.lint.dependencies]
black = "^23.10.1"
mypy = "^1.6.1"
ruff = "^0.1.3"
isort = "^5.12.0"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.11"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true
exclude = [
    '.mypy_cache',
    '.pytest_cache',
    '.venv',
    '.vscode',
    '__pycache__',
    '.coverage',
    'htmlcov',
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__":'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
